# makurosu

./: .cspell.json  .rustfmt.toml  Cargo.toml  README.md  dprint.json  justfile
src/: lib.rs  makurosu.rs  template.rs
src/makurosu/: codegen.rs  codegen_test.rs  parse.rs  parse_test.rs
src/template/: filter.rs  parse.rs
src/template/filter/: ident.rs  string.rs
src/template/parse/: block.rs  block_test.rs  for_loop.rs  for_loop_test.rs  if_stmt.rs  if_stmt_test.rs  match_stmt.rs  match_stmt_test.rs  pipechain.rs  pipechain_test.rs
